<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAll"
    android:orientation="vertical"
    android:weightSum="1">
<LinearLayout
    android:id="@+id/adcontrol"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <TextView
        android:text="@string/advertisment"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/yellow"
        android:text="@string/yes"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp" />

    <Button
        android:onClick="onUpgradeAppButtonClicked"
        android:foregroundGravity="center"
        android:textAlignment="center"
android:padding="@dimen/activity_vertical_margin"
        android:textColor="@color/colorText"
        android:background="@color/colorAccent"
        android:text="@string/item_3_disable_ads"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/programm_description_layout_height"
        android:layout_weight="0.54" />



</LinearLayout>
<View
    android:background="@color/buttonColor"
    android:layout_height="1dp"
    android:layout_width="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <TextView

            android:id="@+id/text_bg"
            android:text="@string/play_in_bg"
            style="@style/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView" />
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:id="@+id/switch1"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/textView"
            android:layout_marginEnd="60dp"
            android:layout_above="@+id/textView" />
        <TextView

            android:layout_margin="@dimen/button_margin"
            android:layout_below="@+id/text_bg"
            android:text="@string/play_in_bg_details"
            style="@style/SimpleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />
    </RelativeLayout>
    <View
        android:background="@color/buttonColor"
        android:layout_height="1dp"
        android:layout_width="match_parent"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <TextView

            android:id="@+id/text_bg1"
            android:text="@string/keep_conn"
            style="@style/MainTitle"
            android:layout_width="@dimen/est_conn_text_w"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:id="@+id/switch2"
            android:layout_gravity="right"
            android:layout_marginEnd="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignBottom="@+id/text_bg1" />
        <TextView
            android:layout_margin="@dimen/button_margin"
            android:layout_below="@+id/text_bg1"
            android:text="@string/keep_conn_details"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView2" />
    </RelativeLayout>


</LinearLayout>